--- a/package.json
+++ b/package.json
@@ -1,27 +1,34 @@
 {
-	"name": "graphql-jsx-reconciler",
-	"version": "1.0.0",
-	"main": "index.js",
-	"license": "MIT",
-	"scripts": {
-		"build": "babel src --out-dir dist --extensions \".ts\",\".tsx\"",
-		"local": "yarn build && node dist"
-	},
-	"dependencies": {
-		"react": "^17.0.1",
-		"react-reconciler": "^0.26.1"
-	},
-	"devDependencies": {
-		"@babel/cli": "^7.12.13",
-		"@babel/core": "^7.12.13",
-		"@babel/preset-env": "^7.12.13",
-		"@babel/preset-react": "^7.12.13",
-		"@babel/preset-typescript": "^7.12.13",
-		"@types/jest": "^26.0.20",
-		"@types/react": "^17.0.1",
-		"@types/react-reconciler": "^0.26.0",
-		"jest": "^26.6.3",
-		"ts-jest": "^26.5.0",
-		"typescript": "^4.1.3"
-	}
+  "name": "graphql-jsx-reconciler",
+  "version": "1.0.0",
+  "main": "index.js",
+  "license": "MIT",
+  "scripts": {
+    "cleanup": "rm -rf ./dist",
+    "build": "yarn build:src && yarn build:examples",
+    "build:src": "babel src --out-dir dist/src --extensions \".ts\",\".tsx\"",
+    "build:examples": "babel examples --out-dir dist/examples --extensions \".ts\",\".tsx\"",
+    "local": "yarn cleanup && yarn build",
+    "local:basic": "yarn local && node dist/examples/basic",
+    "local:router": "yarn local && node dist/examples/router"
+  },
+  "dependencies": {
+    "react": "^17.0.1",
+    "react-reconciler": "^0.26.1"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.12.13",
+    "@babel/core": "^7.12.13",
+    "@babel/preset-env": "^7.12.13",
+    "@babel/preset-react": "^7.12.13",
+    "@babel/preset-typescript": "^7.12.13",
+    "@types/inquirer": "^7.3.1",
+    "@types/jest": "^26.0.20",
+    "@types/react": "^17.0.1",
+    "@types/react-reconciler": "^0.26.0",
+    "inquirer": "^7.3.3",
+    "jest": "^26.6.3",
+    "ts-jest": "^26.5.0",
+    "typescript": "^4.1.3"
+  }
 }
