--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "graphql-jsx-reconciler",
+  "name": "express-reconciler",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
@@ -13,6 +13,7 @@
     "local:router": "yarn local && node dist/examples/router"
   },
   "dependencies": {
+    "express": "^4.17.1",
     "react": "^17.0.1",
     "react-reconciler": "^0.26.1"
   },
@@ -22,6 +23,7 @@
     "@babel/preset-env": "^7.12.13",
     "@babel/preset-react": "^7.12.13",
     "@babel/preset-typescript": "^7.12.13",
+    "@types/express": "^4.17.11",
     "@types/inquirer": "^7.3.1",
     "@types/jest": "^26.0.20",
     "@types/react": "^17.0.1",
