--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     "declaration": true,
     "outDir": "dist",
     "declarationDir": "typings",
-    "jsx": "react-jsx",
+    "jsx": "react",
     "baseUrl": "src"
   },
   "include": ["src"]
